PA2 SeqEvaluator&SeqContEvaluator finished