@@ -1,11 +1,9 @@
 package hk.ust.comp3021;
 
 import java.util.*;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import java.util.Optional;
 
 public class FunNode<T> {
   private List<Optional<T>> inputs;
@@ -14,35 +12,46 @@ public class FunNode<T> {
 
   public FunNode(int arity, Function<List<T>, T> fun) {
     // part 1: function data dependency graph node
-    this.inputs = new ArrayList<>(Collections.nCopies(arity, Optional.empty()));
+    if (arity < 0) {
+      throw new IllegalArgumentException("Arity must be non-negative");
+    }
+    this.inputs = IntStream.range(0, arity)
+            .mapToObj(i -> Optional.<T>empty())
+            .collect(Collectors.toList());
     this.f = fun;
-//    throw new UnsupportedOperationException(); testing
+//    throw new UnsupportedOperationException();
   }
 
   public Optional<FunNode<T>> setInput(int i, T value) {
     // part 1: function data dependency graph node
     if (i < 0 || i >= inputs.size()) {
-      return Optional.empty();
+      throw new IllegalArgumentException("Input index out of bounds");
     }
+
+    // Update the input at index i
     inputs.set(i, Optional.of(value));
-    return inputs.stream().allMatch(Optional::isPresent) ? Optional.of(this) : Optional.empty();
-//    throw new UnsupportedOperationException();
-  }
-  public List<Optional<T>> getInputs() {
-    return inputs;
-  }
-  public T getResult() {
-    if (output.isPresent()) {
-      return output.get();
-    } else {
-      throw new IllegalStateException("Result not available. Ensure eval() is called first.");
-    }
+
+    // Check if all inputs are ready
+    boolean allInputsReady = inputs.stream().allMatch(Optional::isPresent);
+    return allInputsReady ? Optional.of(this) : Optional.empty();
   }
 
-  public synchronized void eval(){
+  public T getResult() {
+    return output.orElseThrow(() ->
+            new IllegalStateException("Result is not available; node has not been evaluated.")
+    );
+  }
+
+  public void eval() {
     // part 1: function data dependency graph node
-    List<T> values = inputs.stream().map(Optional::get).toList();
-    output = Optional.of(f.apply(values));
-//    throw new UnsupportedOperationException();
+    if (inputs.stream().anyMatch(Optional::isEmpty)) {
+      throw new IllegalStateException("Cannot evaluate: some inputs are missing.");
+    }
+    List<T> inputValues = inputs.stream().map(Optional::get).collect(Collectors.toList());
+    output = Optional.of(f.apply(inputValues));
+  }
+
+  public boolean isEvaluated() {
+    return output.isPresent();
   }
 }
